--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buwanekas-personal-site",
-  "homepage": "https://buwaneka-sumanasekara.github.io/buwaneka-sumanasekara",
+  "homepage": "https://buwaneka-sumanasekara.github.io/me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
