--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -230,6 +230,7 @@
             "Java",
             "MySQL"
         ],
+        "link": "https://github.com/Buwaneka-Sumanasekara/biz2017",
         "type": "desktop",
         "des": "This is a point of sales system I have developed for the Spare parts sales shop"
     },
