--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,22 +5,21 @@
         "tech": [
             "React Native",
             "React Query",
-            "AWS cognito",
+            "AWS",
             "IOS",
             "Android",
             "Firebase",
             "Fastlane",
             "Github Actions",
-            "Unit Tests",
+            "Unit Tests (Jest)",
             "Testing Automation",
             "Gauge",
             "Appium",
-            "React Query",
             "Redux",
             "Stream io"
         ],
         "type": "mobile",
-        "des": "GoTradie is a platform which allows tradies (eg: Electricians, Plumbers, carpenters) to manage their business and maintain own team and do communications between them and manage their worksites etc. Also it allows to communicate with their customer and update progress of the site. Gotradie chat has many features like messaging, sending images, videos and document through the chats. also business owners can maintain business profile with more information about their businesses and owned licenses etc.",
+        "des": "GoTradie is a platform which allows tradies (eg: Electricians, Plumbers, carpenters) to manage their business and maintain own team and do communications between them and manage their worksites etc. Also it allows to communicate with their customer and update progress of the site. Gotradie chat has many features like messaging, sending images, videos and document through the chats. also business owners can maintain business profile with more information about their businesses and owned licenses etc. Which has communication features like messaging and getting Video/Audio calls option",
         "link": "https://www.gotradie.com.au/"
     },
     {
@@ -31,7 +30,7 @@
             "Redux",
             "IOS",
             "Android",
-            "Redux"
+            "Gulp"
         ],
         "type": "mobile",
         "des": "This is a money transfer app which allows to send money to selected countries from United Kingdom. And Its allowed to maintain your own beneficiaries and identities",
@@ -61,7 +60,8 @@
             "Android",
             "Google Pay",
             "Apple Pay",
-            "Redux"
+            "GraphQL",
+            "Wordpress"
         ],
         "type": "mobile",
         "des": "This is recipe app which allows users to access thousands of Free and premium recipes. This app includes Google wallet, Apple pay implementation for subscriptions",
@@ -75,7 +75,7 @@
             "Redux",
             "IOS",
             "Android",
-            "Redux"
+            "Laravel"
         ],
         "type": "mobile",
         "des": "Leap Initiative is a new programme developed by the Social Development Centre in conjunction with the Islamic Religious Council Singapore (MUIS) to provide you and your family with the support and resources to help you thrive.",
@@ -90,7 +90,6 @@
             "IOS",
             "Android",
             "Stripe",
-            "Redux"
         ],
         "type": "mobile",
         "des": "Fetch me is a delivery app which allows to register fetchers and buyers in a sames app. This includes stripe payment integration and verified fetcher options. Buyer can simple place a order with pick up place and delivery please and instruction etc and try the order receiving process when it connected with a fetcher",
