--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,10 @@ jobs:
        run: npm install
 
      - name: upload project
-       run: actions/upload-pages-artifact
+       uses: actions/upload-pages-artifact
 
      - name: Deploy to Github pages
-       run: actions/deploy-pages@v4
+       uses: actions/deploy-pages@v4
        
        
     
