--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - main  # Change to your main branch name if different
 
 jobs:
-  create-environment:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
